@@ -134,6 +134,7 @@ Release 0.9.10
 - fixed b:#3014025 - rss feed broken
 - extend RSS controller to allow to configure RSS sources as bean definition
   via the setting 'apps.store.rss.sources'
+- refactor existing feeds from ZMRssController into ZMDefaultRssFeedSource
 
 Release 0.9.9
 - in ZMDbTableMapper handle database exception building auto mappings
